other/restrict-scale/.chainsaw-test/bad-deployment-too-many-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-deployment
  labels:
    type: monitoring
spec:
  replicas: 6
  selector:
    matchLabels:
      app: myapp
      type: monitoring
  template:
    metadata:
      labels:
        app: myapp
        type: monitoring
    spec:
      containers:
      - name: nginx
        image: nginx:1.27.5
