other/restrict-scale/.chainsaw-test/good-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-deployment
  labels:
    type: monitoring
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
      type: monitoring
  template:
    metadata:
      labels:
        app: myapp
        type: monitoring
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
